--- a/Epam_Task_Code.html
+++ b/Epam_Task_Code.html
@@ -1,6 +1,11 @@
+<!-- EPAM-Task-9:Login/Registration form using HTML,CSS -->
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Epam-Task:Sign in page</title>
+		<meta charset="utf-8" />
+    		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    		<meta name="viewport" content="width=device-width, initial-scale=1" />  
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Mukta:wght@600&display=swap" rel="stylesheet">
